[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portein"
version = "0.0.1"
description = "2D portraits of 3D protein structures"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Janani Durairaj"},
    { name = "Mehmet Akdel" },
]
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "numba>=0.58",
    "biotite>=0.40",
    "matplotlib>=3.8",
    "typer>=0.9",
    "Pillow>=10.0",
    "pyyaml>=6.0",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "jupyter-book>=1.0,<2.0",
    "sphinx-book-theme>=1.1",
    "myst-nb>=1.1",
    "sphinx-gallery>=0.16",
    "sphinxcontrib-bibtex>=2.6",
    "sphinx-autodoc-typehints>=2.0",
]

[project.urls]
Source = "https://github.com/TurtleTools/portein"
Tracker = "https://github.com/TurtleTools/portein/issues"

[project.scripts]
portein = "portein.__main__:app"

[tool.setuptools.packages.find]
include = ["portein*"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["*.ipynb"]  # README.ipynb is documentation, not source

[tool.ruff.lint]
# pyflakes (F) + pycodestyle (E,W) + isort (I) + bugbear (B) + pyupgrade (UP)
select = ["E", "F", "I", "W", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # matplotlib.use("Agg") must precede pyplot import
# rotate.py uses `i, j, k = np.eye(3)` and other one-letter math names
"portein/rotate.py" = ["E741"]
# illustrate.py writes Illustrate's fixed-width input format — these are data lines
"portein/plot/illustrate.py" = ["E501"]
# numpydoc docstrings occasionally exceed 120 chars
"portein/config.py" = ["E501"]
"portein/plot/secondary_structure.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "pymol: tests that require pymol-open-source",
    "dssp: tests that require mkdssp",
    "network: tests that require network access (RCSB fetch)",
]
