[metadata]
name = portein
version = 0.0.1
description = 2D portraits of 3D protein structures
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/TurtleTools/portein
author = Janani Durairaj, Mehmet Akdel
author_email = janani.durairaj@gmail.com
license = MIT License
license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Bio-Informatics
project_urls =
;    Documentation =
    Source = https://github.com/TurtleTools/portein
    Tracker = https://github.com/TurtleTools/portein/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    numpy
    numba
    prody
    matplotlib
    click

python_requires = >=3.7

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    portein = portein.__main__:main